fix erreur jackson